-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.12.1, Qt Creator 4.12.3
-
None
-
under Windows 10 64-bits.
-
-
da2e8bbf7ba3300b7c41220071fbcdd2d2a8d9ef (qt-creator/qt-creator/4.13)
Qt Creator hangs on printing a source file (spools 'forever' and becomes non-responsive) when printing after changing the page size in the printer preferences dialog.
Steps to reproduce:
- click "File" > "Print..."
- click "Preferences"
- change "Paper Size" (changed from "Letter" to "A4")
- click "OK"
- click "Print"
Qt Creator will keep on spooling the print job (many, many pages) and is no longer responsive.
For Gerrit Dashboard: QTCREATORBUG-24110 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
310301,3 | Editor: add log for printing | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
314565,2 | Editor: fix hanging when using invalid printer page rect | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |