Editor: add log for printing

Task-number: QTCREATORBUG-24110
Change-Id: Ic4fef2e268cf3adf852a3ce7b229cb98356bbc5e
Reviewed-by: Eike Ziller <eike.ziller@qt.io>